--- a/GolvaApp/Base.lproj/Main.storyboard
+++ b/GolvaApp/Base.lproj/Main.storyboard
@@ -341,25 +341,93 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hl5-Bp-YX8">
-                                <rect key="frame" x="10" y="10" width="394" height="250"/>
+                                <rect key="frame" x="10" y="10" width="394" height="90"/>
                                 <subviews>
-                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="oXQ-kL-jzq">
-                                        <rect key="frame" x="0.0" y="0.0" width="197" height="250"/>
-                                    </datePicker>
-                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="Wlt-Hp-6a8">
-                                        <rect key="frame" x="197" y="0.0" width="197" height="250"/>
-                                    </datePicker>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uA9-GW-WuF">
+                                        <rect key="frame" x="0.0" y="0.0" width="197" height="90"/>
+                                        <subviews>
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="oXQ-kL-jzq">
+                                                <rect key="frame" x="10" y="35.5" width="177" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="NRN-pz-iam"/>
+                                                </constraints>
+                                            </datePicker>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Giriş" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1A-oy-ajP">
+                                                <rect key="frame" x="10" y="10" width="177" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="e1A-oy-ajP" firstAttribute="leading" secondItem="uA9-GW-WuF" secondAttribute="leading" constant="10" id="JVj-9S-hs9"/>
+                                            <constraint firstItem="oXQ-kL-jzq" firstAttribute="leading" secondItem="uA9-GW-WuF" secondAttribute="leading" constant="10" id="dSE-1P-e8s"/>
+                                            <constraint firstItem="e1A-oy-ajP" firstAttribute="top" secondItem="uA9-GW-WuF" secondAttribute="top" constant="10" id="dYd-4b-haL"/>
+                                            <constraint firstAttribute="trailing" secondItem="oXQ-kL-jzq" secondAttribute="trailing" constant="10" id="hVk-jd-eH9"/>
+                                            <constraint firstAttribute="trailing" secondItem="e1A-oy-ajP" secondAttribute="trailing" constant="10" id="oXw-fa-urh"/>
+                                            <constraint firstItem="oXQ-kL-jzq" firstAttribute="top" secondItem="e1A-oy-ajP" secondAttribute="bottom" constant="5" id="qiX-ad-b84"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3b4-A6-8F3">
+                                        <rect key="frame" x="197" y="0.0" width="197" height="90"/>
+                                        <subviews>
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="cqy-ya-nww">
+                                                <rect key="frame" x="10" y="35.5" width="177" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="sH1-xl-c0b"/>
+                                                </constraints>
+                                            </datePicker>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Çıkış" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tvI-Jk-KTm">
+                                                <rect key="frame" x="10" y="10" width="177" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="tvI-Jk-KTm" firstAttribute="leading" secondItem="3b4-A6-8F3" secondAttribute="leading" constant="10" id="H0J-to-kqk"/>
+                                            <constraint firstItem="cqy-ya-nww" firstAttribute="top" secondItem="tvI-Jk-KTm" secondAttribute="bottom" constant="5" id="WKH-JX-7f5"/>
+                                            <constraint firstItem="tvI-Jk-KTm" firstAttribute="top" secondItem="3b4-A6-8F3" secondAttribute="top" constant="10" id="Yd4-jD-IKD"/>
+                                            <constraint firstItem="cqy-ya-nww" firstAttribute="leading" secondItem="3b4-A6-8F3" secondAttribute="leading" constant="10" id="aML-Vy-Dco"/>
+                                            <constraint firstAttribute="trailing" secondItem="cqy-ya-nww" secondAttribute="trailing" constant="10" id="hSh-Ij-0Zq"/>
+                                            <constraint firstAttribute="trailing" secondItem="tvI-Jk-KTm" secondAttribute="trailing" constant="10" id="kJH-Se-8Ay"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="250" id="U1i-Ue-Nbi"/>
+                                    <constraint firstAttribute="height" constant="90" id="U1i-Ue-Nbi"/>
                                 </constraints>
                             </stackView>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="mTR-WO-meW">
+                                <rect key="frame" x="115" y="145.5" width="291" height="31"/>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fiyat Aralığı" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9A2-FU-o7l">
+                                <rect key="frame" x="10" y="150" width="88" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2500+" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2kb-Bw-Eny">
+                                <rect key="frame" x="235" y="115" width="51" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8bC-Li-Lgx"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="8bC-Li-Lgx" firstAttribute="trailing" secondItem="mTR-WO-meW" secondAttribute="trailing" constant="10" id="8vb-Er-afd"/>
+                            <constraint firstItem="9A2-FU-o7l" firstAttribute="top" secondItem="hl5-Bp-YX8" secondAttribute="bottom" constant="50" id="DMn-Nm-A60"/>
+                            <constraint firstItem="mTR-WO-meW" firstAttribute="leading" secondItem="9A2-FU-o7l" secondAttribute="trailing" constant="19" id="Dip-pA-SRb"/>
                             <constraint firstItem="hl5-Bp-YX8" firstAttribute="top" secondItem="8bC-Li-Lgx" secondAttribute="top" constant="10" id="FM4-R1-E4T"/>
+                            <constraint firstItem="mTR-WO-meW" firstAttribute="centerY" secondItem="9A2-FU-o7l" secondAttribute="centerY" id="GNb-3D-ibG"/>
                             <constraint firstItem="8bC-Li-Lgx" firstAttribute="trailing" secondItem="hl5-Bp-YX8" secondAttribute="trailing" constant="10" id="Mb0-54-NEn"/>
+                            <constraint firstItem="9A2-FU-o7l" firstAttribute="leading" secondItem="8bC-Li-Lgx" secondAttribute="leading" constant="10" id="d0j-Gb-Vjj"/>
+                            <constraint firstItem="mTR-WO-meW" firstAttribute="top" secondItem="2kb-Bw-Eny" secondAttribute="bottom" constant="10" id="hqO-bC-YAh"/>
+                            <constraint firstItem="2kb-Bw-Eny" firstAttribute="centerX" secondItem="mTR-WO-meW" secondAttribute="centerX" id="mTp-tt-g2v"/>
                             <constraint firstItem="hl5-Bp-YX8" firstAttribute="leading" secondItem="8bC-Li-Lgx" secondAttribute="leading" constant="10" id="rw1-l2-tqb"/>
                         </constraints>
                     </view>
